# chris-onboarding

./: .gitignore  README.md  app.py  appunti.docx  frontend.py  pyproject.toml  requirements.txt  test.py  ~$ppunti.docx
backend/: Dockerfile  app.py  pyproject.toml  requirements.txt  test.py
backend/src/config/: env_loader.py
backend/src/dependencies/: auth.py  xtoken.py
backend/src/models/: auth_models.py  schemas.py
backend/src/prompts/: prompts.py
backend/src/routers/: auth_router.py  chat_router.py  user_router.py
backend/src/services/: auth_service.py  cosmos_connector.py  openai_connector.py
frontend/: Dockerfile  env_loader.py  frontend.py  pyproject.toml  requirements.txt
src/config/: env_loader.py
src/models/: schemas.py
src/services/: openai_connector.py
