[project]
name = "onboarding"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "annotated-doc==0.0.4",
    "annotated-types==0.7.0",
    "anyio==4.13.0",
    "azure-cosmos>=4.16.1",
    "bcrypt>=5.0.0",
    "certifi==2026.5.20",
    "charset-normalizer==3.4.7",
    "click==8.4.1",
    "colorama==0.4.6",
    "crypto>=1.4.1",
    "detect-installer==0.1.0",
    "distro==1.9.0",
    "dnspython==2.8.0",
    "email-validator==2.3.0",
    "fastapi==0.137.0",
    "fastapi-cli==0.0.24",
    "fastapi-cloud-cli==0.20.0",
    "fastar==0.11.0",
    "h11==0.16.0",
    "httpcore==1.0.9",
    "httptools==0.8.0",
    "httpx==0.28.1",
    "idna==3.18",
    "jinja2==3.1.6",
    "jiter==0.15.0",
    "jose>=1.0.0",
    "jsonpatch==1.33",
    "jsonpointer==3.1.1",
    "langchain-core==1.4.8",
    "langchain-openai==1.3.2",
    "langchain-protocol==0.0.18",
    "langsmith==0.8.18",
    "markdown-it-py==4.2.0",
    "markupsafe==3.0.3",
    "mdurl==0.1.2",
    "openai==2.43.0",
    "orjson==3.11.9",
    "packaging==26.2",
    "pydantic==2.13.4",
    "pydantic-core==2.46.4",
    "pydantic-extra-types==2.11.1",
    "pydantic-settings==2.14.1",
    "pygments==2.20.0",
    "python-dotenv==1.2.2",
    "python-multipart==0.0.32",
    "pyyaml==6.0.3",
    "regex==2026.5.9",
    "requests==2.34.2",
    "requests-toolbelt==1.0.0",
    "rich==15.0.0",
    "rich-toolkit==0.20.1",
    "rignore==0.7.6",
    "sentry-sdk==2.62.0",
    "shellingham==1.5.4",
    "sniffio==1.3.1",
    "starlette==1.3.1",
    "streamlit>=1.58.0",
    "tenacity==9.1.4",
    "tiktoken==0.13.0",
    "tqdm==4.68.3",
    "typer==0.26.7",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.2",
    "urllib3==2.7.0",
    "uuid-utils==0.16.2",
    "uvicorn==0.49.0",
    "watchfiles==1.2.0",
    "websockets==16.0",
    "xxhash==3.7.0",
    "zstandard==0.25.0",
]
